--- a/services/inventory-service/src/main/resources/application.properties
+++ b/services/inventory-service/src/main/resources/application.properties
@@ -1,22 +1,3 @@
 spring.application.name=inventory-service
 
-# Flyway configuration
-spring.flyway.url=jdbc:h2:mem:db
-spring.flyway.user=sa
-spring.flyway.password=sa
-spring.flyway.locations=classpath:db/migration
-
-# JPA configuration (some adjustments)
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.show-sql=true
-logging.level.org.hibernate.SQL=DEBUG
-
-spring.datasource.url=jdbc:h2:mem:db
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=sa
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.h2.console.enabled=true
-
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+spring.config.import=optional:configserver:http://localhost:8888
