feat: purchase product endpoint

--- a/services/config-server/src/main/resources/configurations/inventory-service.properties
+++ b/services/config-server/src/main/resources/configurations/inventory-service.properties
@@ -1,8 +1,8 @@
 server.port=8081
 
 spring.flyway.url=jdbc:h2:mem:product-service
-spring.flyway.user=sa
-spring.flyway.password=sa
+spring.flyway.user=${spring.datasource.username}
+spring.flyway.password=${spring.datasource.password}
 spring.flyway.locations=classpath:db/migration
 
 spring.jpa.hibernate.ddl-auto=none
